# balanced-chess-haskell

./: LICENSE  README.md  balanced-chess.cabal
app/: Main.hs
src/: Chess.hs
