name:                balanced-chess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cbreezier/balanced-chess-haskell
license:             BSD3
license-file:        LICENSE
author:              Leo Huang
maintainer:          leo.tx.huang@gmail.com
copyright:           2017 Leo Huang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable balanced-chess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , balanced-chess
  default-language:    Haskell2010

test-suite balanced-chess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , balanced-chess
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cbreezier/balanced-chess-haskell
